--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,30 +1,45 @@
-*{
+/*-------------------------------Global CSS---------------------------- */
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+/* secondpage */
+h2 {
+    font-size: 45px;
+}
+
+/* fifth Page */
+sup {
+    color: red;
+    font-size: 30px;
+}
+
+span {
+    font-size: 10px;
+    color: rgba(128, 128, 128, 0.905);
+}
 
 
 
- /*---------------------FIRST PAGE------------------------*/
-.background{
-   
+
+/*-------------------------------------FIRST PAGE----------------------------------*/
+.background {
     background-image: url(../images/camera-man.jpg);
     background-size: cover;
 }
-.container{
-   
+
+.container {
     display: flex;
     justify-content: center;
-    height: 100vh;
-    background-color: rgba(61, 72, 78,0.9);
-   
+    padding-bottom: 400px;
+    background-color: rgba(61, 72, 78, 0.9);
 }
 
 .sub-container {
     margin-top: 20px;
-   }
+}
 
 .navbar {
     display: flex;
@@ -39,17 +54,15 @@
 
 .navbar ul li {
     list-style: none;
-    padding:10px;
-}
-.navbar ul li img{
-    border-radius:100%;
-    height: 36px;
-
+    padding: 10px;
 }
 
+.navbar ul li img {
+    border-radius: 100%;
+    width: 36px;
+}
 
-
-.button1{
+.button1 {
     display: flex;
     position: absolute;
     right: 0%;
@@ -59,19 +72,18 @@
 
 .button1 a {
     font-size: 18px;
-    margin-top:20px;
+    margin-top: 20px;
     margin-right: 20px;
     color: rgb(122, 121, 121);
     text-decoration: none;
 }
 
 .button1 button {
-    width: 100px;
-    height: 35px;
+    padding: 0px 20px;
     margin-top: 10px;
     border-radius: 5px;
     border: none;
-    background-color:rgb(63, 58, 88);
+    background-color: rgb(63, 58, 88);
     color: white;
 }
 
@@ -80,16 +92,23 @@
 }
 
 .left {
-    
     width: 30vw;
     margin-top: 100px;
     color: white;
 }
 
+.para {
+    margin-top: 30px;
+}
+
+.para div {
+    font-size: 24px;
+    font-style: oblique bold;
+}
+
 .left button {
     margin-top: 30px;
-    width: 130px;
-    height: 35px;
+    padding: 12px;
     border-radius: 9px;
     border: none;
     background-color: rgb(14, 233, 123);
@@ -98,22 +117,8 @@
     font-size: 20px;
 }
 
-.para {
-  
-    margin-top: 30px;
-
-   
-    
-}
-.para div{
-    font-size:24px;
-    font-style: oblique bold;
-   
-}
-
 
 .right {
-  
     margin-top: 100px;
     margin-left: 220px;
 }
@@ -121,37 +126,25 @@
 .right img {
     height: 240px;
     width: 318px;
-
 }
 
-
-/* SECOND PAGE */
-
-.box{
-
+/*---------------------------------SECOND PAGE-------------------------------------*/
+.box {
     display: flex;
-    height: 50vh;
+    padding-bottom: 20px;
+    /* height: 50vh; */
     justify-content: center;
     align-items: center;
-
 }
 
-
-
 .clip img {
-    height: 200px;
+    width: 200px;
 }
 
 .content {
-
-    height: 200px;
     width: 600px;
     margin: 0px 96px;
     line-height: 1.5;
-}
-
-h2 {
-    font-size: 40px;
 }
 
 .content p {
@@ -159,30 +152,36 @@ h2 {
 }
 
 .icon {
-
-    height: 200px;
     width: 50px;
 }
 
 .icon img {
-    height: 50px;
+    width: 50px;
     border-radius: 60px;
     margin: 20px 0px;
 }
 
 .boxtwo {
     background-color: #67bf95;
-    height: 84vh;
+    padding-bottom: 350px;
     position: relative;
 }
 
 .heading {
-
     width: 700px;
     margin: auto;
     color: white;
     line-height: 1.8;
     padding: 70px 0px;
+}
+
+.photo img {
+   
+    width: 65%;
+ 
+    position: absolute;
+    bottom: 0%;
+    margin:0% 20%;
 }
 
 .prev,
@@ -192,7 +191,6 @@ h2 {
     top: 50%;
     padding: 16px;
     transition: 0.6s ease;
-
 }
 
 .next {
@@ -200,47 +198,21 @@ h2 {
     border-radius: 3px 0 0 3px;
 }
 
-.photo {
-   
-    width: 64%;
-    margin: auto;
-}
 
-.photo img {
-    margin-top: 40px;
-    width: 1035px;
-    height: 382px;
-    position: absolute;
-    bottom: 0px;
-   
-}
-
-/*---------------------------THIRD PAGE---------------------*/
-
-
-
-
-
-
-
+/*------------------------------------------THIRD PAGE-----------------------------------------*/
 .container3 {
-    height: 120vh;
-    width: 100vw;
-
+    padding-bottom: 100px;
+   
 }
 
-.para3{
-
+.para3 {
     color: #212020;
     font-size: 34px;
     font-weight: 500;
     text-align: center;
     padding: 50px 0px 0px 0px;
-    margin:auto;
-
+    margin: auto;
 }
-
-
 
 .header {
     margin: auto;
@@ -249,14 +221,97 @@ h2 {
     text-align: center;
     padding: 40px 0px 0px 0px;
     line-height: 2;
+}
 
+.table {
+    display: flex;
+    justify-content: center;
+  
+   
+}
+
+.row {
+   width: 15%;
+    margin: 0% 3%;
+    color: rgba(0, 0, 0, 0.551);
+   
 }
 
 .free {
-    margin: 30px 0px 0px 0px;
+    margin: 3% 0% 0% 0%;
     background-color: #585b5f;
-    width: 228px;
-    height: 46px;
+    padding: 0px 78px;
+    color: #ffffff;
+    font-family: Roboto;
+    font-size: 22px;
+    font-weight: 500;
+    font-style: normal;
+    letter-spacing: normal;
+    line-height: 50px;
+    text-align: center;
+    border: none;
+}
+.free1{
+    margin: 3% 0% 0% 0%;
+    background-color: #585b5f;
+    padding: 0px 34%;
+    color: #ffffff;
+    font-family: Roboto;
+    font-size: 22px;
+    font-weight: 500;
+    line-height: 50px;
+    text-align: center;
+    border: none;
+}
+
+.list {
+    background-color: #ebeff4;
+    margin: 0% 0% 3% 0%;
+}
+
+.list1 {
+    background-color: rgba(10, 246, 45, 0.274);
+    margin: 0% 0% 3% 0%;
+}
+
+.list2 {
+    background-color: #d2fbf3;
+    margin: 0% 0% 3% 0%;
+}
+
+.list ul li {
+    list-style: none;
+    padding: 13% 0%;
+    font-family: Roboto;
+    font-size: 18px;
+    font-style: normal;
+    letter-spacing: normal;
+    font-style: normal;
+    text-align: center;
+}
+
+.list1 ul li {
+    list-style: none;
+    padding: 13% 0%;
+    font-size: 18px;
+    font-style: normal;
+    letter-spacing: normal;
+    text-align: center;
+}
+
+.list2 ul li {
+    list-style: none;
+    padding: 13% 0%;
+    font-size: 18px;
+    font-style: normal;
+    letter-spacing: normal;
+    text-align: center;
+}
+
+.prof {
+    margin: 3% 0% 0% 0%;
+    background-color: #3fd734;
+    padding: 0px 60px;
     color: #ffffff;
     font-family: Roboto;
     font-size: 22px;
@@ -268,89 +323,14 @@ h2 {
     border: none;
 }
 
-.list {
-    width: 228px;
-    height: 320px;
-    background-color: #ebeff4;
-    margin:0px 0px 30px 0px;
-
-
-}
-
-.list1 {
-    width: 228px;
-    height: 320px;
-    background-color: rgba(10, 246, 45, 0.274);
-    margin:0px 0px 30px 0px;
-
-
-
-}
-
-.list2 {
-    width: 228px;
-    height: 320px;
-    background-color: #d2fbf3;
-    margin:0px 0px 30px 0px;
-
-
-}
-
-
-.list ul li {
-    list-style: none;
-
-    padding: 30px 0px;
-    
-    font-family: Roboto;
-    font-size: 18px;
-
-    font-style: normal;
-    letter-spacing: normal;
-    font-style: normal;
-    text-align: center;
-}
-
-
-.list1 ul li {
-    list-style: none;
-
-    padding: 30px 0px;
- 
-   
-    font-size: 18px;
- 
-    font-style: normal;
-    letter-spacing: normal;
-   
-    text-align: center;
-}
-
-.list2 ul li {
-    list-style: none;
-
-    padding: 30px 0px;
-   
-   
-    font-size: 18px;
-    
-    font-style: normal;
-    letter-spacing: normal;
-   
-    text-align: center;
-}
-
-.prof {
-    margin: 30px 0px 0px 0px;
+.prof1 {
+    margin: 3% 0% 0% 0%;
     background-color: #3fd734;
-    width: 228px;
-    height: 46px;
+    padding: 0% 31%;
     color: #ffffff;
     font-family: Roboto;
     font-size: 22px;
     font-weight: 500;
-    font-style: normal;
-    letter-spacing: normal;
     line-height: 50px;
     text-align: center;
     border: none;
@@ -358,113 +338,94 @@ h2 {
 }
 
 .enter {
-    margin: 30px 0px 0px 0px;
+    margin: 3% 0% 0% 0%;
     background-color: #1febeb;
-    width: 228px;
-    height: 46px;
+    padding: 0% 32%;
     color: #ffffff;
     font-family: Roboto;
     font-size: 22px;
     font-weight: 500;
-    font-style: normal;
     letter-spacing: normal;
     line-height: 50px;
     text-align: center;
     border: none;
 }
 
-.table {
-    display: flex;
-
-    justify-content: center;
-
+.enter1 {
+    margin: 3% 0% 0% 0%;
+    background-color: #1febeb;
+    padding: 0% 32%;
+    color: #ffffff;
+    font-family: Roboto;
+    font-size: 22px;
+    font-weight: 500;
+    line-height: 50px;
+    text-align: center;
+    border: none;
 }
 
-.row {
-    margin: 0px 80px;
-    color: rgba(0, 0, 0, 0.551);
-    border-top-right-radius:20px;
-}
-
-.price{
+.price {
     color: #585b5f;
-    font-weight:bolder;
+    font-weight: bolder;
     font-size: large;
-
 }
-.price1{
+
+.price1 {
     color: #3fd734;
-    font-weight:bolder;
+    font-weight: bolder;
     font-size: large;
-
 }
-.price2{
+
+.price2 {
     color: #1febeb;
-    font-weight:bolder;
+    font-weight: bolder;
     font-size: large;
-
 }
 
-
-/* fouth PAGE */
-
-.container4{
-
-    height: 100vh;
-
-}
-
-
-.grey{
+/*--------------------------------fouth PAGE--------------------------------------*/
+.grey {
     background-color: rgba(119, 136, 153, 0.2);
-    height: 130px;
+    padding: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 30px;
 }
 
-.video{
+.video {
     background-image: url(../images/wheels.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    height: 84%;
 }
 
-.fade{
-    height: 100%;
+.fade {
+    padding: 300px;
     background-color: rgba(152, 4, 4, 0.46);
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.fade img{
+.fade img {
     cursor: pointer;
-    height: 80px;
+    width: 80px;
 }
 
 /*------------------------FIFTH PAGE---------------------------*/
-
-
 .container5 {
     background-color: #2f3136;
-    height: 94vh;
-
+    padding: 52px;
 }
 
 .image5 {
-    height: 180px;
-    width: 150px;
-    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-radius: 100%;
-
 }
 
-
-.image5 img{
-    margin-top: 30px;
-    height: 220px;
+.image5 img {
+    width: 220px;
 }
 
 .container5-1 {
@@ -472,38 +433,36 @@ h2 {
     justify-content: center;
 }
 
+.contact1 {
+    margin-right: 15%;
+}
+
+
 .textbox {
     color: #d7d7d7;
     font-family: Roboto;
     margin-top: 60px;
     font-size: 18px;
     font-weight: 500;
-
 }
 
 .inputbox {
-    width: 400px;
-    height: 60px;
+    padding: 6% 0%;
     border: 2px solid rgba(255, 255, 255, 0.4);
     background-color: #2f3338;
-    color:white ;
+    color: white;
     font-size: 20px;
 }
 
 .inputbox1 {
-    width: 350px;
-    height: 220px;
+    padding: 37% 0%;
     border: 2px solid rgba(255, 255, 255, 0.4);
     background-color: #2f3338;
     color: white;
-    font-size: 20px;    
+    font-size: 20px;
 }
 
-.contact1 {
-    margin-right: 250px;
-}
-
-.submit{
+.submit {
     display: flex;
     justify-content: flex-end;
     margin-top: 40px;
@@ -512,8 +471,7 @@ h2 {
 
 .button5 {
     background-color: #be393b;
-    width: 106px;
-    height: 43px;
+    padding: 12px 35px;
     color: #ffffff;
     font-size: 12px;
     font-weight: 700;
@@ -523,7 +481,7 @@ h2 {
 
 .footer {
     background-color: #292c30;
-    height: 50px;
+    padding: 5px;
     color: #ffffffe3;
 
 }
@@ -534,39 +492,29 @@ h2 {
     justify-content: center;
 }
 
-.footer-right {
-
-    padding-left: 40px;
-    margin-left: 500px;
-}
-
-.footer-left {
-    margin-right: 50px;
-    padding: 18px 0px 0px 0px;
-    margin-left: 5px;
-}
-
-span{
-    font-size: 10px;
-    color: rgba(128, 128, 128, 0.905);
-}
-
 .image-footer {
     padding: 16px 0px 0px 0px;
 
 }
 
 .image-footer img {
-    height: 22px;
+    width: 22px;
+}
+
+.footer-left {
+  
+    padding: 18px 0px 0px 0px;
+   
+}
+
+.footer-right {
+
+    padding-left: 40px;
+    margin-left: 17%;
 }
 
 .footer-right img {
-    height: 33px;
-    margin-top: 10px;
-
-}
-
-sup{
-    color: red;
-    font-size: 30px;
+    width:100px;
+   margin-top: 4%;
+   
 }
